--- a/app/views/gossips/index.html.erb
+++ b/app/views/gossips/index.html.erb
@@ -1,1 +1,33 @@
-<h1> SALUT </h1>
+<h1> INDEX </h1>
+
+<h1> Gossips</h1>
+
+<table>
+  <head>
+    <tr>
+      <th>Anonymous author</th>
+      <th>Content</th>
+      <th colspan="3"></th>
+    </tr>
+  </head>
+
+  <body>
+
+  	
+
+	   <td><% @gossips.each do |gossip| %></td>
+<tr>
+
+	   <td><%= gossip.anonymous_author %></td>
+      <td> <%= gossip.content %></td>
+       <td><%= link_to 'Show', gossip %></td>
+       <td><%= link_to 'Edit', edit_gossip_path(gossip) %></td>
+       <td> <%= link_to 'Destroy', gossip, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    </tr>
+        <% end %>
+
+  </body>
+
+</br>
+  
+  <%= link_to 'New Gossip', new_gossip_path %>
